# huginn

./: .gitignore  README.md  compose.yaml
.github/workflows/: publish-wiki-branch.yml  publish-wiki.yml
apps/laravel-front/: composer.json
apps/laravel-front/app/Http/Controllers/: ChatController.php
apps/laravel-front/resources/views/: welcome.blade.php
apps/laravel-front/resources/views/chat/: index.blade.php
apps/laravel-front/routes/: web.php
apps/php/public/: index.php
apps/python-llm/: corpus.txt  pyproject.toml  rnn.pt
apps/python-llm/llm_rnn/: __init__.py  config.py  generate.py  model.py  tokenizer.py  tokenizer_bpe.py  train.py
apps/symfony-back/: .env.dev  composer.json
apps/symfony-back/config/: services.yaml
apps/symfony-back/src/Controller/: LLMController.php
data/: corpus.txt  grammar.txt  qa.txt  tasks.txt
data/metrics/: train_metrics.jsonl
docs/: README.md  architecture.md  env.md  setup.md  troubleshooting.md
docs/ops/: deployment.md
docs/services/: laravel-front.md  python-llm.md  symfony-back.md
docs/wiki/: Architecture.md  Backend-Symfony.md  Documentation-Generique.md  Environment.md  Frontend-Laravel.md  Home.md  HowTo-Publish.md  LLM-RNN-CLI.md  LLM-Service-Python.md  Ops-Deployment.md  Setup.md  Tokenization.md  Troubleshooting.md
ops/java/: Dockerfile  GatewayServer.java
ops/laravel/: Dockerfile
ops/php/: Dockerfile
ops/python/: Dockerfile
ops/symfony/: Dockerfile
services/llm/: infer_server.py  metrics_server.py  supervisor.py
ui/web/: index.html  widget-container.html  widget-script.html
(+11 files in other folders)
